# ai-workspace-assistant

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
src/ai_workspace_assistant/: __init__.py  cli.py  config.py  errors.py  ignore.py  models.py  progress.py  scanner.py
src/ai_workspace_assistant/analyzers/: __init__.py  base.py  extensions.py  languages.py  todos.py
src/ai_workspace_assistant/reporters/: __init__.py  base.py  json.py  markdown.py
tests/: conftest.py  test_analyzers.py  test_cli.py  test_ignore.py  test_reporters.py  test_scanner.py
